Name:           mypretty
Version:        0.1

-- This is a comment.  It stretches to the end of the line.

Synopsis:       My pretty printing library, with JSON support
Description:
    A simple pretty printing library that illustrates how to develop a Haskell
    library
Author:         Bob Sullivan
Maintainer:     Arunram
Cabal-Version:  >= 1.2


-- To describe the individual library, use 'library' section

library
    Exposed-Modules:    Prettify
                        PrettyJSON
                        SimpleJSON
    Build-Depends:      base >= 2.0



-- runghc Setup configure
-- runghc Setup configure --prefix=$HOME --user  (to install in home dir)
-- runghc Setup build
-- runghc Setup install


    